Almost ready for 0.3.9.0

--- a/Translations/bg_BG.yaml
+++ b/Translations/bg_BG.yaml
@@ -43,10 +43,14 @@ translations:
   - id: coming-soon-header
     text: "Очаквайте скоро!"
     # Add coming soon text 1
+  - id: coming-soon-text-1
+    text: ""
   - id: coming-soon-text-2
     text: "Благодарим за търпението ви!"
 
   # deck-edit-card.html
+  - id: edit-card-site-title
+    text: "Редактиране на карта"
   - id: new-card-h1
     text: "Нова Карта"
   - id: input-mode-p
@@ -175,3 +179,73 @@ translations:
     text: "Обществен"
   - id: release
     text: "Издание"
+
+  # about.html
+  - id: about_h1
+    text: "За {{ trademark }}"
+  - id: about_p1_1
+    text: "{{ trademark }}(卣囙/yǒuyīn) е проста платформа за лесно и ефикасно запомняне на Хандзъ/Канджи/Ханджа/汉字/漢字 и/или други писмености."
+  - id: about_p1_2
+    text: "Използваме прост подход, основан на flashcard-ове. Това са компонентите на програмата:"
+  - id: about_p1_li_1
+    text: "Тренировка - Помага ви да се научите да четете и учите различни символи"
+  - id: about_p1_li_2
+    text: "Пазар за тестета - Обширен лист от обществени и официални тестета, които може да внесете във вашето тесте по всяко време"
+  - id: about_p1_li_3
+    text: "Класации и потребителски профили - Геймифицира употребата на сайта, като предизвиква потребителя да се състезава със други потребители във седмични класации"
+  - id: about_p2
+    text: "Приложението не е речник. Потребителя трябва да използва друго приложение за речник(като {} за китайски)."
+  - id: about_h2
+    text: "История на разработката"
+  - id: about_p3_1
+    text: "През Януари 2023, {} решава да създатае {{ trademark }}, като решение за проблема с липсата за приложения за учене на китайски символи и други писмености. Той не намерил друго съществуващо решение, и следователно разработил собствено. Първоначално създадено, като платформа за учене на китайски символи, {{ trademark }} вече поддържа други писмености, като Хирагана, Катакана, Кирилица, Латинската азбука, Гръцката азбука, и др."
+  - id: about_p3_2
+    text: "Името {{ trademark }} идва от тъпа шега за играта {}, където хората в интернет полудяваха, когато виждаха различни обекти, наподобяващи очертанието на членовете на екипажа от играта. На китайски, името използва 2-та символа \"卣囙\"(произнсят ся, като \"yǒuyīn\" на пинйин), които изглеждат, като членовете от екипажа. Освен това, името на сайта е подобно на следните 3 думи:"
+  - id: about_p3_li_1
+    text: "诱因 - източник, особено на болест. Свързано е, защото ще станете болни от синдрома \"Знам всички китайски символи?!?!?!?!\""
+  - id: about_p3_li_2
+    text: "油印 - мимеограф, устройство за копиране на текст и снимки от един лист хартия на друг. Свързано е, защото ще преписвате много символи"
+  - id: about_p3_li_3
+    text: "有瘾 - да си пристрастен към нещо. Свързано е, защото ще сте пристрастени ком писане на символи в сайта"
+  - id: about_p3
+    text: "Двойката 卣囙 няма реално значение. Първият символ е архаична дума за \"съд за вино с малко гърло\", докато второто е стар вариант на символа 因, който има следните значения: основа, източник, да слеваш, да продължаваш напред, защото, и др."
+  - id: about_h3
+    text: "Благодарности"
+  - id: about_p4
+    text: "{{ trademark }} използва следните библиотеки с отворен код, за повечето операции със символи:"
+  - id: about_p4_li_1
+    text: " - Предоставя информация за символите, които Hanziwriter използва"
+  - id: about_p4_li_2
+    text: " - Предоставя валидация на тестовете за ръкопис, както и анимации на символите"
+  - id: about_p4_li_3
+    text: " - Предоставя данните за Японско Канджи и повечето Кана"
+  - id: about_p5
+    text: "Освен това, искаме да благодарим на следните хора, които помогнаха в разработката на приложението:"
+  - id: about_p5_li_1
+    text: "{} за преводите на немски език"
+  - id: about_p5_li_2
+    text: "{} за преводите на японски език"
+  - id: about_p5_li_3
+    text: "{} за помощ с оправяне на няколко дозини UI и UX проблеми"
+  - id: about_h4
+    text: "Познати проблеми и бъгове"
+  - id: about_h4_h1
+    text: "Бутона за започване на сесия или полето за писане е прекалено голямо"
+  - id: about_q1
+    text: "Въпрос: Когато променя големината на прозореца на браузъра или завърша тест, бутона за започване на сесия или полето за писане става по-голямо от свободната големина на екрана. Защо се случва това?"
+  - id: about_a1
+    text: "A: Unfortunately, this peculiar error cannot be resolved by us, because it's mainly caused by third party extensions. One example is {}. The only way to stop that from happening is to find out which extension causes this and disable it for our site."
+  - id: about_h5
+    text: "Повече като {{ trademark }}"
+  - id: about_h5_1
+    text: " - Сайт за подобряване на граматика, пунктуация и правопис"
+  - id: about_h5_2
+    text: " - Четене на книги във формата на TikTok"
+  - id: about_h5_3
+    text: "{} разработва повече от просто {{ trademark }}. Вижте следните програми и библиотеки в сферата на човешките езици"
+  - id: about_h5_4
+    text: " - Добавка за ръкъпис към {}"
+  - id: about_h5_5
+    text: " - Данните за всички символи използвани в {{ trademark }}, обединена на едно място"
+  - id: about_h5_6
+    text: " - Проекта по интернационализация, към MadLad Squad"
