--- a/Translations/en_US.yaml
+++ b/Translations/en_US.yaml
@@ -153,7 +153,7 @@ translations:
   # marketplace.html
   - id: official-decks-header
     text: "Official decks"
-  - id: new-deck-upload-info
+  - id: new_deck_upload_info
     text: "Want to add your deck to the marketplace? Click below to learn more!"
   - id: upload-deck-public
     text: "Upload"
