Added extensive mode + fixed multible critical bugs + we no longer display multiple cards when editing or creating a phrase

--- a/Translations/bg_BG.yaml
+++ b/Translations/bg_BG.yaml
@@ -38,6 +38,14 @@ translations:
     text: "Профил"
   - id: locale
     text: "bg_BG/"
+  - id: extensive-mode-title
+    text: "Включва т.н. подробен режим. Вместо преглеждане на картите само веднъж, картите се преглеждат няколко пъти, като постепенно се премахват картите с най-високо ниво на познание."
+  - id: extensive-mode-aria-label
+    text: "Чекбокс за подробен режим"
+  - id: extensive-mode-label
+    text: "Подробен режим"
+  - id: game_modifiers_header
+    text: "Настройки за играта"
 
   # Coming soon
   - id: coming-soon-header
@@ -89,6 +97,12 @@ translations:
     text: "Фраза"
   - id: card_character
     text: "Символ"
+  - id: delete-edit-button
+    text: "Изтрий"
+  - id: deck-new-delete-phrase
+    text: "Сигурни ли сте, че искате да ИЗТРИЕТЕ тази фраза. ИЗТРИТАТА ИНФОРМАЦИЯ НЕ МОЖЕ ДА СЕ ВЪЗСТАНОВЕНА!"
+  - id: deck-new-delete-card
+    text: "Сигурни ли сте, че искате да ИЗТРИЕТЕ този символ. ИЗТРИТАТА ИНФОРМАЦИЯ НЕ МОЖЕ ДА БЪДЕ ВЪЗСТАНОВЕНА!"
 
   # deck.html
   - id: profile-statistics-header
@@ -198,7 +212,7 @@ translations:
   - id: about_h2
     text: "История на разработката"
   - id: about_p3_1
-    text: "През Януари 2023, {} решава да създатае {{ trademark }}, като решение за проблема с липсата за приложения за учене на китайски символи и други писмености. Той не намерил друго съществуващо решение, и следователно разработил собствено. Първоначално създадено, като платформа за учене на китайски символи, {{ trademark }} вече поддържа други писмености, като Хирагана, Катакана, Кирилица, Латинската азбука, Гръцката азбука, и др."
+    text: "През Януари 2023, {} решава да създаде {{ trademark }}, като решение на проблема с липсата на приложения за учене на китайски символи и други писмености. Той не намерил друго съществуващо решение, и следователно разработил собствено. Първоначално създадено, като платформа за учене на китайски символи, {{ trademark }} вече поддържа други писмености, като Хирагана, Катакана, Кирилица, Латинската азбука, Гръцката азбука, и др."
   - id: about_p3_2
     text: "Името {{ trademark }} идва от тъпа шега за играта {}, където хората в интернет полудяваха, когато виждаха различни обекти, наподобяващи очертанието на членовете на екипажа от играта. На китайски, името използва 2-та символа \"卣囙\"(произнсят ся, като \"yǒuyīn\" на пинйин), които изглеждат, като членовете от екипажа. Освен това, името на сайта е подобно на следните 3 думи:"
   - id: about_p3_li_1
