--- a/Translations/en_US.yaml
+++ b/Translations/en_US.yaml
@@ -46,6 +46,16 @@ translations:
     text: "Extensive mode"
   - id: game_modifiers_header
     text: "Game modifiers"
+  - id: finish_page_header
+    text: "Session complete"
+  - id: finish_page_characters_reviewed
+    text: "Total characters reviewed"
+  - id: finish_page_phrases_reviewed
+    text: "Total phrases reviewed"
+  - id: finish_page_session_len
+    text: "Session length"
+  - id: finish_page_continue
+    text: "Continue"
 
   # Coming soon
   - id: coming-soon-header
