New romaji IMEs

--- a/Translations/bg_BG.yaml
+++ b/Translations/bg_BG.yaml
@@ -77,6 +77,10 @@ translations:
     text: "Нормално"
   - id: pinyin-input-description
     text: "Позволява ви да използвате формата на Pinyin с числа в полетата за въвеждане на текст. Ще превърне текста във валиден pinyin. Пример: 'pin1 yin1' става 'pīn yīn'."
+  - id: romaji-hiragana-input-description
+    text: "Позволява ви да използвате Romaji за да пишете на Хирагана. Забележка 1: Слагайки 'x' преди звука ви позволява пишете малка Хирагана. Забележка 2: Единственият начин да напишете 'っ', е като напишете 'xtsu'. Забележка 3: Използвайте '-' за 'ー'."
+  - id: romaji-katakana-input-description
+    text: "Позволява ви да използвате Romaji за да пишете на Катакана. Забележка 1: Слагайки 'x' преди звука ви позволява пишете малка Катакана. Забележка 2: Единственият начин да напишете 'ッ', е като напишете 'xtsu'. Забележка 3: Използвайте '-' за 'ー'."
   - id: phrase-preview-section-header
     text: "Визуализации"
   - id: finish-edit-button
